# lib/db/src/schema/index.ts
@@ -1,3 +1,5 @@
 export * from "./downloadCounters";
 export * from "./moduleBackups";
 export * from "./diffReports";
+export * from "./conversations";
+export * from "./messages";
